[build-system]
requires = ["setuptools >= 60.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minaombud"
version = "0.1.6"
authors = [ { name = "Bolagsverket" } ]
requires-python = ">=3.8"
description = "Mina ombud sample integration"
urls = {}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "cryptography>=3.4.0",
    "pip_system_certs",
    "requests",
    "requests-oauthlib",
]

[project.optional-dependencies]
dev = [
    "black[d]",
    "coverage[toml]",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests",
    "types-waitress"
]
server = ["waitress", "Paste"]

[project.scripts]
minaombud = "minaombud.cli:main"
minaombud-server = "minaombud.server:main"
minaombud-sample-adminuser = "minaombud.samples.adminuser_sample:sample"
minaombud-sample-enduser = "minaombud.samples.enduser_sample:sample"


###
### [tool.black]
### https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
target-version = ["py38"]

###
### [tool.mypy]
### https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true

###
### [tool.pytest]
### https://docs.pytest.org/en/6.2.x/customize.html#
[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]


###
### [tool.coverage]
### https://coverage.readthedocs.io/en/6.5.0/config.html
[tool.coverage.run]
source = [
    "src",
#    "tests"
]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
show_missing = true
precision = 2
